tests/snapshots/compiler_error_fixtures/adversarial__common_dev_mistakes__Main.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/common_dev_mistakes/Main.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum`.

  examples/compiler_errors/adversarial/common_dev_mistakes/CollectionsConfusion.flx:10:13
   |
10 |         sum([|1, 2, 3|])
   |             ^^^^^^^^^^^
   |             ----------- this argument has type `Array<Int>`

Note:
  expected argument type: List<Int>
  found argument type: Array<Int>
  the actual argument type is inferred from this expression

Help:
  Pass a `List<Int>` value as the 1st argument.


Note: Module Skipped

I skipped module `examples/compiler_errors/adversarial/common_dev_mistakes/Main.flx` because its dependency `CollectionsConfusion` already has errors.


error[E011]: Private Member

Cannot access private member `secret`.

  examples/compiler_errors/adversarial/common_dev_mistakes/MissingPublicAccess.flx:8:9
  |
8 |         HiddenApi.secret()
  |         ^^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


error[E011]: Private Member

Cannot access private member `_private_secret`.

  examples/compiler_errors/adversarial/common_dev_mistakes/PrivateMemberAccess.flx:8:9
  |
8 |         HiddenApi._private_secret()
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.


error[E013]: Module Not Imported

Module `Flow` is not imported.

  examples/compiler_errors/adversarial/common_dev_mistakes/UnknownBaseMemberTypo.flx:6:9
  |
6 |         Flow.prnit("x")
  |         ^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Flow`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.


error[E407]: Unknown Effect

Function effect annotation references unknown effect `I`.

  examples/compiler_errors/adversarial/common_dev_mistakes/UnknownEffectTypo.flx:5:27
  |
5 |     fn bad() -> Unit with I {
  |                           ^
  |                           - unknown effect in function annotation

Hint:
  did you mean `IO`?


error[E004]: Undefined Variable

I can't find a value named `prnit`.

  examples/compiler_errors/adversarial/common_dev_mistakes/UnknownIdentifierTypo.flx:6:9
  |
6 |         prnit("x")
  |         ^^^^^

Hint:
  Define it first: let prnit = ...;


error[E056]: Wrong Number Of Arguments

The `add` function takes 2 arguments, but 1 were provided.

  examples/compiler_errors/adversarial/common_dev_mistakes/WrongArity.flx:10:9
   |
10 |         add(1)
   |         ^^^^^^
   |         ------ 1 arguments provided here, expected 2

Help:
  Add 1 missing argument(s), for example: `add(arg1, arg2)`.

Found 7 errors and 1 note across 8 modules.
== stdout ==
<not executed>
